# CycberCompany

./: .codex_tmp_query_sqlite.py  .env.example  .gitattributes  .gitignore  .tmp_kiro_downloads.html  .tmp_kiro_downloads_page.js  3.10.0  346-53f5bd936a585f81.js  AGENTS.md  README.md  pyproject.toml  skills-lock.json  总设计.md  聊天主链路设计.md
.run/: env_probe.txt  round18_full_20260524.stderr.txt  round18_full_20260524.stdout.txt  round18_individual_054_100.ps1  round18_individual_FDU18-100-054.stdout.txt  round18_individual_FDU18-100-058.stdout.txt  round18_individual_FDU18-100-062.stdout.txt  round18_individual_FDU18-100-065.stdout.txt  round18_individual_FDU18-100-071.stdout.txt  round19_full_20260524.stderr.txt  round19_full_20260524.stdout.txt  round20_full_20260524.stderr.txt  round21_full_single.stderr.txt  round21_full_single2.pid.txt  round21_full_single2.stderr.txt  round21_full_single2.stdout.txt  round21_problematic_casewise.stdout.txt
.tmp-browser-real-20/secrets/: local_secrets.json
.tmp-browser-real-model-check/secrets/: master.key
.tmp-wechat-browser-20/: wechat_browser_20_report.json
.tmp-wechat-browser-20/secrets/: local_secrets.json  master.key
.tmp_dbg1/: test_phase51_pending_action_bicurrent
.tmp_dbg2/: test_phase51_explicit_file_mutcurrent
.tmp_phase85_continue2/release-reports/: relrep_502cc7b8a9504e3eaa2b288c6beb9e17.json
apps/local-api/app/: __init__.py  (+1 more)
config/: channels.yaml  safety.yaml
config/skill-repositories/: clawhub.index.json
docs/: 00-阅读结论与最终决策.md  01-产品设计.md  02-开发设计.md  03-聊天主链路最终设计.md  04-组织壳与公司壳设计.md  05-资产中心与能力系统设计.md  06-数据模型与接口契约.md  07-安全权限审计与评测.md  08-Codex开发约束与路线图.md  09-参考来源与借鉴清单.md  10-前端页面与交互详细设计.md  11-后端服务与模块详细设计.md  12-记忆系统详细设计.md  13-任务引擎与多成员协作详细设计.md  14-Skill_MCP_Tool插件详细设计.md  15-MVP开发实施清单.md  16-聊天质量目标架构设计.md  17-聊天质量核心接口契约设计.md  18-聊天质量重构代码落地映射.md  19-聊天链路阶段1兼容层清单.md  20-回复质量架构重构方案.md  README.md  聊天话术重构清单.md
docs/feishu-new-round23-200-real-model/: 01-feishu-new-round23-200-real-model-cases.md  02-feishu-new-round23-200-real-model-report.md  03-gap-and-fix-queue.md  run_feishu_new_round23_200_real_model_cases.py
docs/开发计划/: 01-第一阶段-最终态工程底座与产品骨架.md  02-第二阶段-聊天主链路与模型路由.md  03-第三阶段-记忆系统与上下文网关.md  04-第四阶段-资产中心与能力权限图.md  05-第五阶段-任务引擎与工具执行.md  06-第六阶段-Skill_MCP_插件系统.md  07-第七阶段-多成员协作与组织壳完善.md  08-第八阶段-安全审计评测与封版打磨.md  09-第九阶段-设计偏差修复与最终态主链路对齐.md  10-第十阶段-工程健康修复与封版前硬化.md  100-第一百阶段-办公生产力Skill执行域聚焦打深与知识办公闭环.md  101-第一百零一阶段-扩展兼容层与渠道平台插件化闭环.md  101-第一百零一阶段-音频理解剪辑执行域聚焦打深与媒体工作流闭环.md  102-第一百零二阶段-视频理解剪辑执行域聚焦打深与媒体工作流闭环.md  103-第一百零三阶段-闭环成功率度量体系与真实任务门禁.md  104-第一百零四阶段-质量门禁修复与检查脚本恢复.md  105-第一百零五阶段-扩展兼容层稳定化与运行时边界收紧.md  106-第一百零六阶段-格式敏感回复与技能路由隔离修复.md  107-第一百零七阶段-长期记忆语义契约统一与纠错闭环硬化.md  108-第一百零八阶段-ChatRuntime宿主瘦身与职责拆分封口.md  109-第一百零九阶段-真实场景长稳运行与成熟度复核.md  11-第十一阶段-封版前能力补齐与深度硬化.md  110-第一百一十阶段-渠道路由稳定性与NoTurn根因收敛.md  111-第一百一十一阶段-任务交付证据与可见完成态硬化.md  112-第一百一十二阶段-扩展运行时同步与执行闭环补齐.md  113-第一百一十三阶段-质量门禁执行恢复与检查矩阵跑通.md  114-第一百一十四阶段-真实场景稳定性与主链路可观测性收口.md  115-第一百一十五阶段-黄金扩展包与扩展生态样板闭环.md  116-第一百一十六阶段-成熟度看板与发布门禁统一化.md  117-第一百一十七阶段-控制平面与AgentRuntime分层重构.md  118-第一百一十八阶段-联网资料整理能力分层与证据评估重构.md  12-第十二阶段-聊天体验与复杂对话能力深化.md  13-第十三阶段-意图识别模式选择与上下文决策升级.md  14-第十四阶段-Persona_Heart与回复编排体验深化.md  15-第十五阶段-长期记忆语义检索与知识上下文升级.md  16-第十六阶段-Agent任务规划与Skill_MCP协同深化.md  17-第十七阶段-聊天主链路综合评测与体验封版验收.md  18-第十八阶段-复杂对话语义理解与低置信度决策增强.md  19-第十九阶段-模型辅助规划与Agent智能执行深化.md  20-第二十阶段-语义记忆知识召回质量升级.md  (+82 more)
scripts/: check.ps1  cli.ps1  dev.ps1  run_feishu_real_model_casewise_merge.py  run_goal_engine_real_model_10.py  run_wechat_real_model_200.py
shells/company/: menus.yaml  roles.yaml
tests/: test_chat_voice_layer.py  test_phase2_routing_safety.py  test_phase32_cli_client.py  test_phase32_cli_commands.py  test_phase32_cli_redaction.py  test_phase32_cli_server_manager.py  test_phase32_cli_sse.py  test_response_composer_reasoning.py
tests/evals/: test_asset_eval_phase4.py  test_design_alignment_eval_phase9.py  test_memory_eval_phase3.py  test_release_gate_eval_phase8.py  test_skill_growth_curator_phase59.py  test_skill_mcp_eval_phase6.py  test_supervisor_shell_eval_phase7.py  test_task_eval_phase5.py
tmp-release-debug/diagnostics/: diag_e1b99b9a76d44fc4bd4948d3b8cf3aa1.json
tmp-release-debug/release-reports/: relrep_688e3b7b9eb14a92b3e1750929210da8.json
tmp_decisiondiag/diagnostics/: diag_de45b16671984a7f86314331b97029ee.json
tmp_decisiondiag/release-reports/: relrep_7d2a7943307f42489be83f23606cc9ef.json
tmp_decisiondiag2/diagnostics/: diag_31f34482c83c4a74964646ef95859c3a.json
tmp_decisiondiag2/release-reports/: relrep_e744705aa742426fb72116239e1bf95b.json
tmp_decisiondiag3/diagnostics/: diag_a35e588647f44ff599649dbbdab1adcb.json
tmp_decisiondiag3/release-reports/: relrep_f021796b8bab489bb4e911ba7ac7c591.json
tmp_decisiondiag4/diagnostics/: diag_265bcf7d3b434c009df7818e8b4c518c.json
tmp_decisiondiag4/release-reports/: relrep_9339dc24115943d3b2b29a695eba1c4f.json
(+11321 files in other folders)
